--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
-  <link rel="stylesheet" href="style-prefixed.css">
+  <link rel="stylesheet" href="css/style.prefixed.css">
   <title>Country & capital search engine</title>
 </head>
 <body>
@@ -17,19 +17,20 @@
         <div class="col-6">
           <h2 class="right">country</h2>
           <ul id="countries">
-            <li>No data</li>
+            <li>no data</li>
           </ul>
         </div>
         <div class="col-6">
           <h2 class="left">capital</h2>
           <ul id="capitals">
-            <li>No data</li>
+            <li>no data</li>
           </ul>
+        </div>
       </div>
     </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.js"></script>
-  <script src="scripts.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 </html>
