Fix error when no capital found & fix scrollbar autohiding &update style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>country & capital search engine</h1>
       <input id="country-name" type="text" placeholder="search by country name"/>
-      <div data-simplebar="" class="row">
+      <div data-simplebar data-simplebar-auto-hide="false" class="row">
         <div class="col-6">
           <h2 class="right">country</h2>
           <ul id="countries">
